--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,48 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
+.mtj.tmp/
+*.jar
+*.war
+*.ear
+hs_err_pid*
+*.class
+*.bak
+*~
+.gitignore
+.idea
+.idea/*
+logs
+logs/*
+tmp
+tmp/*
+.history
+.svn
+.svn/*
+*.svn
+.DS_Store
+*.iml
+.iml
+.classpath
+.project
+.settings
+target
+target/*
+.mvn/
+*.ipr
+*.iws
+.checkstyle
+.ekstazi
+.pmd
+.pmdruleset
+.pmdruleset.xml
+.ruleset
+.settings/
+velocity.log
+bin
+bin/*
+.metadata
+.metadata/*
+.sonar
+.sonar/*
